k8s/examples/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dj-ms-core
  labels:
    app.kubernetes.io/name: dj-ms-core
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: dj-ms-core
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: dj-ms-core
        app.kubernetes.io/component: web
    spec:
      containers:
        - name: web
          image: harleyking/dj-ms-core:0.8.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
              name: http
